# ReverseKinematicsSimulator

./: .gitignore  CMakeLists.txt  Readme.md  makefile
include/: fk.hpp  forward_kinematics.hpp  inverse_kinematics.hpp  jacobian.hpp  joint.hpp  link.hpp  mat2.hpp  robot_arm.hpp  vec2.hpp
src/: fk.cpp  forward_kinematics.cpp  inverse_kinematics.cpp  jacobian.cpp  main.cpp  makefile  robot_arm.cpp  two_link_fk.cpp
